--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+    adafruit/Adafruit GFX Library @ ^1.11.9
+    adafruit/Adafruit ST7735 and ST7789 Library @ ^1.10.3
+    adafruit/Adafruit BusIO @ ^1.16.0
